<resources>
    <string name="app_name">Leaderboard</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada sem nullam dapibus enim, odio at velit a non. Tristique aliquet faucibus ridiculus fermentum arcu nullam magna.</string>

    <string name="label_do_exit">Press one more time to exit</string>
    <string name="the_is_no_ongoing_leaderboards">There is no ongoing leaderboards</string>
    <string name="tap_on">Tap on " + " button to add a new leaderboard</string>
    <string name="ongoing_leaderboards">Ongoing Leaderboards</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="next">Next</string>
    <string name="enter_game_name">Enter Game Name</string>
    <string name="tap_avatar_to_change">* Tap avatar to change</string>
    <string name="tap_icon_to_change">* Tap icon to change</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="next_round">Next Round</string>
    <string name="end_game">End Game</string>
    <string name="select_point">Select Point</string>
    <string name="go_to_next_round">Go To Next Round</string>
    <string name="no_cancel">No, Cancel</string>
    <string name="yes_go_ahead">Yes, Go Ahead</string>
</resources>