<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.fizhu.leaderboard.viewmodels.AddScoringViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="Add Scoring"
                app:titleTextColor="@color/md_white_1000" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@+id/iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/margin_64"
            android:layout_height="@dimen/margin_64"
            android:layout_margin="@dimen/margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/padding"
            android:src="@drawable/object51"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_48"
            android:layout_marginStart="@dimen/margin"
            app:cardCornerRadius="@dimen/half_padding"
            app:layout_constraintBottom_toBottomOf="@+id/iv"
            app:layout_constraintStart_toEndOf="@+id/iv"
            app:layout_constraintTop_toTopOf="@+id/iv"
            app:strokeColor="@color/divider"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_minus"
                    style="@style/fontLarge"
                    android:layout_width="@dimen/default_height"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/tv_point"
                    style="@style/muliBoldNormal"
                    android:layout_width="@dimen/margin_64"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/btn_plus"
                    style="@style/fontLarge"
                    android:layout_width="@dimen/default_height"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="+"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            app:backgroundTint="@color/accent"
            app:layout_constraintBottom_toBottomOf="@+id/cv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv"
            app:layout_constraintTop_toTopOf="@+id/cv" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/tap_icon_to_change"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetBottom="0dp"
            android:text="@string/save"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>