<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fizhu.leaderboard.viewmodels.AddPlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="Add Players"
                app:titleTextColor="@color/md_white_1000" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_list_player"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@+id/iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            app:boxCornerRadiusTopEnd="@dimen/half_padding"
            app:boxCornerRadiusTopStart="@dimen/half_padding"
            app:endIconDrawable="@drawable/ic_baseline_add_24"
            app:endIconMode="custom"
            app:endIconTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="@+id/iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv"
            app:layout_constraintTop_toTopOf="@+id/iv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Player Name"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.playerName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/margin_64"
            android:layout_height="@dimen/margin_64"
            android:layout_margin="@dimen/margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/padding"
            android:src="@drawable/animal48"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/tap_avatar_to_change"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetBottom="0dp"
            android:text="@string/next"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>